--- a/react/index.html
+++ b/react/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi fuga ab quod excepturi esse minus sapiente deleniti fugiat enim. Rem et modi ipsa corrupti error vel cumque magnam vero minus!</h1>
+    <h1>Lorem apiente deleniti fugiat enim. Rem et modi ipsa corrupti error vel cumque magnam vero minus!</h1>
 </body>
 </html>
